<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Mobile SGMC</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_login">Logina</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_equipa_cirurgica">Equipa Cirurgica</string>
    <string name="btn_WebService">WebService</string>
<string name="search">Procurar</string>
<string name="save_Equipa">Guardar Equipa Cirurgica</string>
<string name="add_Profissional">Adicionar Profissional</string>
    <string-array name="spinnerInicio">
        <item></item>
    </string-array>
    <string-array name="menuDrawer">
       
        <item>Equipa Cirurgica</item>
        <item>Utentes</item>
    </string-array>
    <string-array name="lateralidadeArray">
        <item></item>
        <item>Direita</item>
        <item>Esquerda</item>
        <item>Bi Lateral</item>
        <item>Não Aplicável</item>
    </string-array>
    <string-array name="arrayTipoAnestesia">
        <item></item>
        <item>Anestesia geral</item>
        <item>Anestesia peridural</item>
        <item>Anestesia raquidiana</item>
        <item>Anestesia local</item>
    </string-array>
    
     
          <string-array name="arrayPlacaEletrodoNeutro">
        <item></item>
        <item>Sim</item>
        <item>Nao</item>
        </string-array>
        <string-array name="arrayCateterismovisical">
        <item></item>
        <item>Sonda de Nelaton</item>
        <item>Sonda de Foley</item>
        <item>Sonda de Owen</item>
      
    </string-array>
    
          <string-array name="arrayNasogastrica">
        <item></item>
        <item>Sonda Nasogástrica</item>
        
      
    </string-array>
    
           <string-array name="arrayPosicaoOperatoria">
        <item></item>
        <item>Decubito dorsal</item>
        <item>Decubito ventral</item>
        <item>Decubito lateral</item>
        <item>Posicao de litotomia</item>
        <item>Posiçao trendelenburg</item>
        <item>Posiçao trendelenburg Reverso</item>
        <item>Posicao fowler </item>
        <item>Posicao de canivete </item>
       
        
      
    </string-array>
    
           
           <string-array name="arrayLocalizacao">
        <item></item>
        <item>Ante-Braco</item>
        <item>Braco</item>
        <item>Peito</item>
        <item>Mao</item>
        <item>Perna</item>
        <item>Coxa</item>     
      
    </string-array>
    
     <string-array name="arrayClassificacaoASA">
        <item></item>
        <item>ASA I</item>
        <item>ASA II</item>
        <item>ASA III</item>
        <item>ASA IV</item>
        <item>ASA V</item>
        <item>ASA VI</item>
    </string-array>
    
    <string-array name="arrayEspecialidade">
        <item></item>
        <item>Anatomia Patologica</item>
        <item>Anestesiologia</item>
        <item>Cardiologia</item>
        <item>Cirurgia Cardiotoraxica</item>
        <item>Estomatologia</item>
        <item>Farmacologia Clinica</item>
        <item>Medicina Interna</item>
        <item>Nefrologia</item>
        <item>Neurologia</item>
        <item>Ortopedia</item>
        <item>Psiquiatria</item>
        <item>Urologia</item>
    </string-array>
    <string-array name="arrayTipoCirurgia">
        <item></item>
        <item>Cirurgia bucomaxilofacial</item>
        <item>Cirurgia oftalmologica</item>
        <item>Cirurgia otorrinolaringologica</item>
        <item>Cirurgia Cardiotoraxica</item>
        <item>Cirurgia de cabeca e pescoco</item>
        <item>Cirurgia cardiaca</item>
        <item>Cirurgia urologica</item>
        <item>Cirurgia oncologica</item>
        <item>Cirurgia plastica</item>
        <item>Cirurgia reconstrutiva</item>
        <item>Cirurgia estetica</item>
        <item>Cirurgia robotica</item>
    </string-array>
    <string-array name="arrayDestino">
        <item>Bloco 1</item>
        <item>Bloco 2</item>
        <item>Bloco 3</item>
        <item>Bloco 4</item>
        <item>Bloco 5</item>
        <item>Bloco 6</item>
        <item>Bloco 7</item>
        <item>Bloco 8</item>
        <item>Bloco 9</item>
        <item>Bloco 10</item>
        <item>Bloco 11</item>
        <item>Bloco 12</item>
        <item>Bloco 13</item>
        <item>Bloco 14</item>
        <item>Bloco 15</item>
    </string-array>

    <string name="text_equipa_cirurgia">Equipa Cirurgia</string>
    <string name="introduza_o_nome_do_novo_profissional_">Introduza o nome do novo profissional...</string>
    <string name="texto_cirurgiao">Cirurgião:</string>
    <string name="_1_ajudante_">1ºAjudante:</string>
    <string name="_2_ajudante_">2ºAjudante:</string>
    <string name="_3_ajudante_">3ºAjudante:</string>
    <string name="_Anestesista_">Anestesista:</string>
    <string name="_Enfermeiro_Instrumentista_">Enfermeiro Instrumentista:</string>
    <string name="_Enfermeiro_Circulante_">Enfermeiro Circulante:</string>
    <string name="_Enfermeiro_Anestesia_">Enfermeiro de Anestesia:</string>
    <string name="_Assistente_Operacional_">Assistente Operacional:</string>
    <string name="title_activity_utentes">UtentesActivity</string>
    <string name="_Nome_">Nome:</string>
    <string name="_NumProc_">Número Processo:</string>
    <string name="_dataNascimento_">Data Nascimento:</string>
    <string name="_subsistema_">Subsistema:</string>
    <string name="_alergias_">Alergias:</string>
    <string name="_patologias_">Patologias:</string>
    <string name="_antecedentesCirurgicos_">Antecendentes Cirurgicos:</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="username_">Username ...</string>
    <string name="password_">Password ...</string>
    <string name="login">Log In</string>
    <string name="utentes">Utentes</string>
    <string name="equipa_cirurgica">Equipa Cirurgica</string>
    <string name="sair">Sair</string>
    <string name="_Especialidade_Cirurgica_">Especialidade Cirúrgica:</string>
    <string name="_Cirurgia_">Cirurgia:</string>
    <string name="_Data_">Data:</string>
    <string name="_TipoCirurgia_"></string>
    <string name="_TipoCirurgia1_">Tipo Cirurgia:</string>
    <string name="_Sala_">Sala:</string>
    <string name="_Lateralidade_">Lateralidade:</string>
    <string name="_ClassifASA_">Classificação ASA</string>
    <string name="menu">MENU</string>
    <string name="title_activity_dados_intra_operatorio">DadosINtraOperatorioActivity</string>

</resources>