<?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/backgroundmenu"
        android:orientation="vertical" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/ic_icon" />

        <TextView
            android:id="@+id/menuText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dip"
            android:text="@string/app_name"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#FFFFFF"
            android:textStyle="italic" />
<View
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:id="@+id/view1"
        android:background="#ffc1c1c1"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="8dp" />

        <Button
            android:id="@+id/buttonEquipa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="78dp"
            android:background="@drawable/buttonlogin"
            android:text="@string/equipa_cirurgica" />
   
        <Button
            android:id="@+id/buttonUtentes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dip"
            android:background="@drawable/buttonlogin"
            android:text="@string/utentes" />
          
         <Button
            android:id="@+id/buttonDadosCirurgia"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dip"
            android:background="@drawable/buttonlogin"
            android:text="Dados Cirurgia" />
            

        <Button
            android:id="@+id/btnLogOff"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginTop="10dip"
            android:background="@drawable/buttonlogin"
            android:text="@string/sair" />
    </LinearLayout>
